# MPointers2.0

./: CMakeLists.txt  gitignore (1).txt  test.cpp
MPointersClient/: MPointersClient.cpp
MPointersLibrary/: MPointersLibrary.h
client/: LinkedList.h  MPointer.h  MPointerID.h  MemoryManagerClient.h  client.cpp  node.h
proto/: memory_manager.grpc.pb.cc  memory_manager.grpc.pb.h  memory_manager.pb.cc  memory_manager.pb.h  memory_manager.proto
server/: MemoryMap.cpp  main.cpp
server/include/: GarbageCollector.h  MemoryBlock.h  MemoryDump.h  MemoryList.h  MemoryManager.h  MemoryMap.h  NodeStructure.h  Server.h
server/src/: GarbageCollector.cpp  MemoryBlock.cpp  MemoryDump.cpp  MemoryList.cpp  MemoryManager.cpp  MemoryMap.cpp  Server.cpp
